--- a/org/vivo.org
+++ b/org/vivo.org
@@ -209,8 +209,9 @@
 ** PD1617/PD1619 [10/10] 
    SCHEDULED: <2016-12-02 周五>
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
-*** 解决待关闭 [B161023-299] ev_extend                                 :@bug:
+*** 关闭 [B161023-299] ev_extend                                       :@bug:
     CLOSED: [2016-10-29 周六 15:16]
+    - State "关闭"       from "解决待关闭" [2016-10-31 周一 11:36]
     - State "解决待关闭" from "TODO"       [2016-10-29 周六 15:16]
     - State "TODO"       from ""           [2016-10-28 周五 12:03]
 *** 解决待关闭 [B161023-233] HDR 偏蓝                                  :@bug:
