--- a/org/slf.org
+++ b/org/slf.org
@@ -93,6 +93,12 @@
      - State "TODO"       from ""           [2016-10-23 周日 12:09]
 **** TODO release
      - State "TODO"       from ""           [2016-10-23 周日 12:09]
+***** TODO 自启动
+      - State "TODO"       from ""           [2016-11-01 周二 15:44]
+***** TODO hide file : client module
+      - State "TODO"       from ""           [2016-11-01 周二 15:44]
+***** TODO hide lkm from sysfs and so on
+      - State "TODO"       from "TODO"       [2016-11-01 周二 16:00]
 ** TODO 加密解密算法
    - State "TODO"       from ""           [2016-10-20 周四 18:
    - 应该用勒索程序将RSA加密后的密文
