--- a/org/vivo.org
+++ b/org/vivo.org
@@ -1,15 +1,16 @@
 
 
 
-* temporary [6/7]
+* temporary [7/7]
   SCHEDULED: <2016-10-19 周三>
   CLOCK: [2016-10-19 周三 09:42]--[2016-10-19 周三 09:44] =>  0:02
 ** DONE 3a r10809-1...r10810-1
    CLOSED: [2016-10-28 周五 12:07]
    - State "DONE"       from "TODO"       [2016-10-28 周五 12:07]
    - State "TODO"       from ""           [2016-10-25 周二 21:43]
-** TODO [#A] 修改答辩ppt
-   SCHEDULED: <2016-11-03 周四> DEADLINE: <2016-11-03 周四>
+** DONE [#A] 修改答辩ppt
+   CLOSED: [2016-11-03 周四 15:42] SCHEDULED: 
+   - State "DONE"       from "TODO"       [2016-11-03 周四 15:42]
    CLOCK: [2016-10-19 周三 14:50]--[2016-10-19 周三 15:18] =>  0:28
    CLOCK: [2016-10-19 周三 12:05]--[2016-10-19 周三 14:50] =>  2:45
    - State "TODO"       from "DONE"       [2016-10-19 周三 09:11]
@@ -64,7 +65,15 @@
 #+TAGS: @bug(b)
 #+TAGS: @量产前必解(x)
 #+TODO: TODO(t@/!) 新的(1@/!) 正在处理(2@/!) 重新打开(3@/!) 延后处理(4@/!) | DONE(d@/!) 解决待关闭(5@/!) 不做处理(6@/!) 退回(7@/!) 关闭(8@/!) 转给他人(9@/!)
-** PD1616 [18/19] 
+** PD1619F_EX[1/1]
+*** DONE PD1619F_EX移植安奇逻辑算法
+    CLOSED: [2016-11-03 周四 16:35] SCHEDULED: <2016-11-03 周四>
+    - State "DONE"       from "TODO"       [2016-11-03 周四 16:35]
+    - State "TODO"       from "DONE"       [2016-11-03 周四 16:35]
+    - State "DONE"       from "TODO"       [2016-11-03 周四 15:43]
+    - State "TODO"       from ""           [2016-11-02 周三 17:28]
+
+** PD1616 [19/19] 
    SCHEDULED: <2016-10-31 周一>
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
 
@@ -95,8 +104,11 @@
     - State "新的"       from "TODO"       [2016-10-29 周六 15:16]
     - State "TODO"       from ""           [2016-10-25 周二 21:42]
     - 安奇逻辑下一版解
-*** TODO raw 图 [4/4]
-    DEADLINE: <2016-10-20 周四>
+*** DONE raw 图 [4/4]
+    CLOSED: [2016-11-03 周四 15:43] DEADLINE: <2016-10-20 周四>
+    - State "DONE"       from "TODO"       [2016-11-03 周四 15:43] \\
+      高通建议方式是选最亮的点
+      安奇逻辑使用的是中心区域
     - State "TODO"       from ""           [2016-10-19 周三 16:56]
     - [X] 提供图片
     - [X] 提供数据
