--- a/org/slf.org
+++ b/org/slf.org
@@ -175,8 +175,12 @@
 |  7 |         0.574219 |         0.637695 |                1 | 0.11745107 |
 #+TBLFM: $5=(((($2*1024/@2$2)-1)^2+(($3*1024/@2$3)-1)^2+(($4*1024/@2$4)-1)^2)^0.5)
 
-* temporary [9/10]
+* temporary [10/11]
   SCHEDULED: <2016-10-19 周三>
+** DONE qyh dj peek
+   CLOSED: [2016-11-05 周六 18:28] DEADLINE: <2016-11-07 周一>
+   - State "DONE"       from "TODO"       [2016-11-05 周六 18:28]
+   - State "TODO"       from ""           [2016-11-05 周六 17:44]
 ** TODO 下载歌曲 [0/16]
    DEADLINE: <2016-10-26 周三>
    - State "TODO"       from ""           [2016-10-26 周三 09:36]
