--- a/org/vivo.org
+++ b/org/vivo.org
@@ -1,7 +1,7 @@
 
 
 
-* temporary [7/7]
+* temporary [2/3]
   SCHEDULED: <2016-10-19 周三>
   CLOCK: [2016-10-19 周三 09:42]--[2016-10-19 周三 09:44] =>  0:02
 ** DONE 3a r10809-1...r10810-1
@@ -21,6 +21,9 @@
  - [X] 拍照
 **** DONE 1419CL 偏色
 
+** TODO [#A] 分析安奇逻辑 AWB 算法，输出文档
+   DEADLINE: <2016-11-12 周六>
+   - State "TODO"       from ""           [2016-11-05 周六 18:54]
 
 * 出差长安记得带回去的 [0/5]
   SCHEDULED: <2016-10-16 周日>
