--- a/org/vivo.org
+++ b/org/vivo.org
@@ -1,265 +1,266 @@
 
 
 
+
 * temporary [4/4]
-  SCHEDULED: <2016-10-19 ÖÜÈý>
-  CLOCK: [2016-10-19 ÖÜÈý 09:42]--[2016-10-19 ÖÜÈý 09:44] =>  0:02
+  SCHEDULED: <2016-10-19 å‘¨ä¸‰>
+  CLOCK: [2016-10-19 å‘¨ä¸‰ 09:42]--[2016-10-19 å‘¨ä¸‰ 09:44] =>  0:02
 ** DONE 3a r10809-1...r10810-1
-   CLOSED: [2016-10-28 ÖÜÎå 12:07]
-   - State "DONE"       from "TODO"       [2016-10-28 ÖÜÎå 12:07]
-   - State "TODO"       from ""           [2016-10-25 ÖÜ¶þ 21:43]
-** DONE [#A] ÐÞ¸Ä´ð±çppt
-   CLOSED: [2016-11-03 ÖÜËÄ 15:42] SCHEDULED: 
-   - State "DONE"       from "TODO"       [2016-11-03 ÖÜËÄ 15:42]
-   CLOCK: [2016-10-19 ÖÜÈý 14:50]--[2016-10-19 ÖÜÈý 15:18] =>  0:28
-   CLOCK: [2016-10-19 ÖÜÈý 12:05]--[2016-10-19 ÖÜÈý 14:50] =>  2:45
-   - State "TODO"       from "DONE"       [2016-10-19 ÖÜÈý 09:11]
-*** DONE Àý×Ó¼ÓÉÏÊý¾Ý¡¢¶Ô±È   ¶à¼Ó¼¸¸öÀý×Ó
-**** DONE PD1515BAÇåÎú¶ÈÔëµã
- - [X] ½è»ú
- - [X] ¸Ä²ÎÊý
- - [X] ÅÄÕÕ
-**** DONE 1419CL Æ«É«
+   CLOSED: [2016-10-28 å‘¨äº” 12:07]
+   - State "DONE"       from "TODO"       [2016-10-28 å‘¨äº” 12:07]
+   - State "TODO"       from ""           [2016-10-25 å‘¨äºŒ 21:43]
+** DONE [#A] ä¿®æ”¹ç­”è¾©ppt
+   CLOSED: [2016-11-03 å‘¨å›› 15:42] SCHEDULED: 
+   - State "DONE"       from "TODO"       [2016-11-03 å‘¨å›› 15:42]
+   CLOCK: [2016-10-19 å‘¨ä¸‰ 14:50]--[2016-10-19 å‘¨ä¸‰ 15:18] =>  0:28
+   CLOCK: [2016-10-19 å‘¨ä¸‰ 12:05]--[2016-10-19 å‘¨ä¸‰ 14:50] =>  2:45
+   - State "TODO"       from "DONE"       [2016-10-19 å‘¨ä¸‰ 09:11]
+*** DONE ä¾‹å­åŠ ä¸Šæ•°æ®ã€å¯¹æ¯”   å¤šåŠ å‡ ä¸ªä¾‹å­
+**** DONE PD1515BAæ¸…æ™°åº¦å™ªç‚¹
+ - [X] å€Ÿæœº
+ - [X] æ”¹å‚æ•°
+ - [X] æ‹ç…§
+**** DONE 1419CL åè‰²
 
-** DONE ¿Í·¿ÐøÔ¼
-   CLOSED: [2016-11-11 ÖÜÎå 21:38] SCHEDULED: <2016-11-11 ÖÜÎå>
-   - State "DONE"       from "TODO"       [2016-11-11 ÖÜÎå 21:38]
-   - State "TODO"       from ""           [2016-11-11 ÖÜÎå 09:42]
-** DONE [#A] ·ÖÎö alawb £¬Êä³öÎÄµµ
-   CLOSED: [2016-11-15 ÖÜ¶þ 10:02] DEADLINE: <2016-11-12 ÖÜÁù>
-   - State "DONE"       from "TODO"       [2016-11-15 ÖÜ¶þ 10:02]
-   - State "TODO"       from ""           [2016-11-05 ÖÜÁù 18:54]
+** DONE å®¢æˆ¿ç»­çº¦
+   CLOSED: [2016-11-11 å‘¨äº” 21:38] SCHEDULED: <2016-11-11 å‘¨äº”>
+   - State "DONE"       from "TODO"       [2016-11-11 å‘¨äº” 21:38]
+   - State "TODO"       from ""           [2016-11-11 å‘¨äº” 09:42]
+** DONE [#A] åˆ†æž alawb ï¼Œè¾“å‡ºæ–‡æ¡£
+   CLOSED: [2016-11-15 å‘¨äºŒ 10:02] DEADLINE: <2016-11-12 å‘¨å…­>
+   - State "DONE"       from "TODO"       [2016-11-15 å‘¨äºŒ 10:02]
+   - State "TODO"       from ""           [2016-11-05 å‘¨å…­ 18:54]
 
-* ³ö²î³¤°²¼ÇµÃ´ø»ØÈ¥µÄ [0/5]
-  SCHEDULED: <2016-10-16 ÖÜÈÕ>
- - [ ] Ì¨Ê½»ú x2
- - [ ] ²å°å x1
- - [ ] ³äµçÍ· x1
- - [ ] Êý¾ÝÏß x3 £¨¿µÀö x1 £©
+* å‡ºå·®é•¿å®‰è®°å¾—å¸¦å›žåŽ»çš„ [0/5]
+  SCHEDULED: <2016-10-16 å‘¨æ—¥>
+ - [ ] å°å¼æœº x2
+ - [ ] æ’æ¿ x1
+ - [ ] å……ç”µå¤´ x1
+ - [ ] æ•°æ®çº¿ x3 ï¼ˆåº·ä¸½ x1 ï¼‰
  - [ ] PD1415D PD1415BA
 
 
 
-* ÏîÄ¿
+* é¡¹ç›®
 #+TAGS: @bug(b)
-#+TAGS: @Á¿²úÇ°±Ø½â(x)
-#+TODO: TODO(t@/!) ÐÂµÄ(1@/!) ÕýÔÚ´¦Àí(2@/!) ÖØÐÂ´ò¿ª(3@/!) ÑÓºó´¦Àí(4@/!) | DONE(d@/!) ½â¾ö´ý¹Ø±Õ(5@/!) ²»×ö´¦Àí(6@/!) ÍË»Ø(7@/!) ¹Ø±Õ(8@/!) ×ª¸øËûÈË(9@/!)
+#+TAGS: @é‡äº§å‰å¿…è§£(x)
+#+TODO: TODO(t@/!) æ–°çš„(1@/!) æ­£åœ¨å¤„ç†(2@/!) é‡æ–°æ‰“å¼€(3@/!) å»¶åŽå¤„ç†(4@/!) | DONE(d@/!) è§£å†³å¾…å…³é—­(5@/!) ä¸åšå¤„ç†(6@/!) é€€å›ž(7@/!) å…³é—­(8@/!) è½¬ç»™ä»–äºº(9@/!)
 ** PD1619F_EX[1/1]
-*** DONE PD1619F_EXÒÆÖ²°²ÆæÂß¼­Ëã·¨
-    CLOSED: [2016-11-03 ÖÜËÄ 16:35] SCHEDULED: <2016-11-03 ÖÜËÄ>
-    - State "DONE"       from "TODO"       [2016-11-03 ÖÜËÄ 16:35]
-    - State "TODO"       from "DONE"       [2016-11-03 ÖÜËÄ 16:35]
-    - State "DONE"       from "TODO"       [2016-11-03 ÖÜËÄ 15:43]
-    - State "TODO"       from ""           [2016-11-02 ÖÜÈý 17:28]
+*** DONE PD1619F_EXç§»æ¤å®‰å¥‡é€»è¾‘ç®—æ³•
+    CLOSED: [2016-11-03 å‘¨å›› 16:35] SCHEDULED: <2016-11-03 å‘¨å››>
+    - State "DONE"       from "TODO"       [2016-11-03 å‘¨å›› 16:35]
+    - State "TODO"       from "DONE"       [2016-11-03 å‘¨å›› 16:35]
+    - State "DONE"       from "TODO"       [2016-11-03 å‘¨å›› 15:43]
+    - State "TODO"       from ""           [2016-11-02 å‘¨ä¸‰ 17:28]
 
 ** PD1616 [19/19] 
-   SCHEDULED: <2016-10-31 ÖÜÒ»>
-   - State "TODO"       from ""           [2016-10-19 ÖÜÈý 09:16]
+   SCHEDULED: <2016-10-31 å‘¨ä¸€>
+   - State "TODO"       from ""           [2016-10-19 å‘¨ä¸‰ 09:16]
 
-*** ½â¾ö´ý¹Ø±Õ [B161026-120] 3800KÇ¿ÉÁÆ«À¶                      :@bug:@Á¿²úÇ°±Ø½â:
-    CLOSED: [2016-10-29 ÖÜÁù 20:13] DEADLINE: <2016-10-29 ÖÜÁù>
-    - State "½â¾ö´ý¹Ø±Õ" from "ÕýÔÚ´¦Àí"   [2016-10-29 ÖÜÁù 20:13]
-    - State "ÕýÔÚ´¦Àí"   from "ÐÂµÄ"       [2016-10-29 ÖÜÁù 15:26]
-    - State "ÐÂµÄ"       from "TODO"       [2016-10-29 ÖÜÁù 15:12]
-    - State "TODO"       from ""           [2016-10-28 ÖÜÎå 11:55]
-*** ½â¾ö´ý¹Ø±Õ [B161026-117] ISO ÈËÎïÆ«»Ò                       :@bug:@Á¿²úÇ°±Ø½â:
-    CLOSED: [2016-10-29 ÖÜÁù 20:12] DEADLINE: <2016-10-29 ÖÜÁù>
-    - State "½â¾ö´ý¹Ø±Õ" from "ÕýÔÚ´¦Àí"   [2016-10-29 ÖÜÁù 20:12]
-    - State "ÕýÔÚ´¦Àí"   from "ÐÂµÄ"       [2016-10-29 ÖÜÁù 15:26]
-    - State "ÐÂµÄ"       from "TODO"       [2016-10-29 ÖÜÁù 15:12]
-    - State "TODO"       from ""           [2016-10-28 ÖÜÎå 11:54]
-*** ½â¾ö´ý¹Ø±Õ [B161026-206] ÓÃÀý10Ä£Ê½ÇÐ»»                     :@bug:@Á¿²úÇ°±Ø½â:
-    CLOSED: [2016-10-29 ÖÜÁù 20:09] DEADLINE: <2016-10-29 ÖÜÁù>
-    - State "½â¾ö´ý¹Ø±Õ" from "ÕýÔÚ´¦Àí"   [2016-10-29 ÖÜÁù 20:09]
-    - State "ÕýÔÚ´¦Àí"   from "ÐÂµÄ"       [2016-10-29 ÖÜÁù 15:26]
-    - State "ÐÂµÄ"       from "TODO"       [2016-10-29 ÖÜÁù 15:12]
-    - State "TODO"       from ""           [2016-10-28 ÖÜÎå 11:48]
+*** è§£å†³å¾…å…³é—­ [B161026-120] 3800Kå¼ºé—ªåè“                      :@bug:@é‡äº§å‰å¿…è§£:
+    CLOSED: [2016-10-29 å‘¨å…­ 20:13] DEADLINE: <2016-10-29 å‘¨å…­>
+    - State "è§£å†³å¾…å…³é—­" from "æ­£åœ¨å¤„ç†"   [2016-10-29 å‘¨å…­ 20:13]
+    - State "æ­£åœ¨å¤„ç†"   from "æ–°çš„"       [2016-10-29 å‘¨å…­ 15:26]
+    - State "æ–°çš„"       from "TODO"       [2016-10-29 å‘¨å…­ 15:12]
+    - State "TODO"       from ""           [2016-10-28 å‘¨äº” 11:55]
+*** è§£å†³å¾…å…³é—­ [B161026-117] ISO äººç‰©åç°                       :@bug:@é‡äº§å‰å¿…è§£:
+    CLOSED: [2016-10-29 å‘¨å…­ 20:12] DEADLINE: <2016-10-29 å‘¨å…­>
+    - State "è§£å†³å¾…å…³é—­" from "æ­£åœ¨å¤„ç†"   [2016-10-29 å‘¨å…­ 20:12]
+    - State "æ­£åœ¨å¤„ç†"   from "æ–°çš„"       [2016-10-29 å‘¨å…­ 15:26]
+    - State "æ–°çš„"       from "TODO"       [2016-10-29 å‘¨å…­ 15:12]
+    - State "TODO"       from ""           [2016-10-28 å‘¨äº” 11:54]
+*** è§£å†³å¾…å…³é—­ [B161026-206] ç”¨ä¾‹10æ¨¡å¼åˆ‡æ¢                     :@bug:@é‡äº§å‰å¿…è§£:
+    CLOSED: [2016-10-29 å‘¨å…­ 20:09] DEADLINE: <2016-10-29 å‘¨å…­>
+    - State "è§£å†³å¾…å…³é—­" from "æ­£åœ¨å¤„ç†"   [2016-10-29 å‘¨å…­ 20:09]
+    - State "æ­£åœ¨å¤„ç†"   from "æ–°çš„"       [2016-10-29 å‘¨å…­ 15:26]
+    - State "æ–°çš„"       from "TODO"       [2016-10-29 å‘¨å…­ 15:12]
+    - State "TODO"       from ""           [2016-10-28 å‘¨äº” 11:48]
     - v-85b175f59314fc9a1ff74c038ed7b5e52c90e405
     - aec_process.c:3903
-*** ½â¾ö´ý¹Ø±Õ [B161024-461] AcuteLogic face ³ýÁã               :@bug:@Á¿²úÇ°±Ø½â:
-    CLOSED: [2016-10-29 ÖÜÁù 20:11] DEADLINE: <2016-10-29 ÖÜÁù>
-    - State "½â¾ö´ý¹Ø±Õ" from "ÕýÔÚ´¦Àí"   [2016-10-29 ÖÜÁù 20:11]
-    - State "ÕýÔÚ´¦Àí"   from "ÐÂµÄ"       [2016-10-29 ÖÜÁù 15:26]
-    - State "ÐÂµÄ"       from "TODO"       [2016-10-29 ÖÜÁù 15:16]
-    - State "TODO"       from ""           [2016-10-25 ÖÜ¶þ 21:42]
-    - °²ÆæÂß¼­ÏÂÒ»°æ½â
-*** DONE raw Í¼ [4/4]
-    CLOSED: [2016-11-03 ÖÜËÄ 15:43] DEADLINE: <2016-10-20 ÖÜËÄ>
-    - State "DONE"       from "TODO"       [2016-11-03 ÖÜËÄ 15:43] \\
-      ¸ßÍ¨½¨Òé·½Ê½ÊÇÑ¡×îÁÁµÄµã
-      °²ÆæÂß¼­Ê¹ÓÃµÄÊÇÖÐÐÄÇøÓò
-    - State "TODO"       from ""           [2016-10-19 ÖÜÈý 16:56]
-    - [X] Ìá¹©Í¼Æ¬
-    - [X] Ìá¹©Êý¾Ý
-    - [X] ¼ÆËãÂß¼­
-      - ¿´²»¶®
-    - [X] Ä£×é³§ÖØÐÂÌá¹© DLL
-      - ÒÑµ÷ÓÃ
-*** ²»×ö´¦Àí [B161018-700] AcuteLogic segment fault                    :@bug:
-    CLOSED: [2016-10-20 ÖÜËÄ 17:20] SCHEDULED: <2016-10-20 ÖÜËÄ>
-    - State "²»×ö´¦Àí"   from "DONE"       [2016-10-29 ÖÜÁù 15:17]
-    - State "DONE"       from "TODO"       [2016-10-20 ÖÜËÄ 17:20] \\
-      °²ÆæÂß¼­·ÖÎöÎª log Ì«¶àµ¼ÖÂ
-      ¹Øµô log ¼´¿É
-      ÓÚÊÇ²»×÷´¦Àí
-    - State "TODO"       from ""           [2016-10-19 ÖÜÈý 10:17]
-      ÒÑ·¢ËÍÓÊ¼þ¸ø°²ÆæÂß¼­
-*** DONE °Ñ±£ÃÜÍâ¿ÇµÄÂÝ¶¤×°ÉÏ
-*** DONE ¿½10.15~10.17µÄÕÕÆ¬
-*** DONE ÍõÓÀ¹ú£¬Ã÷¶Èxxxx
- - [X] Í¼Æ¬Æ«°µ£¬ÎÊÅË³Â¾ü
-*** DONE very_limit -> ¿õÎ° £¨¸øµ½Ä£×éºÍÊÖ»ú£©[6/6]
- - [X] ÊÒÍâ£¨ÉÏÏÂÎç¶¼¿ÉÒÔ£¬²»ÒªÍíÉÏ£©
- - [X] ÊÒÄÚ£¨°ì¹«ÊÒ£©
- - [X] Ä£Äâkfc
- - [X] µÆÏä±ê×¼¹âÔ´£¨É«¿¨£©
- - [X] ÒÑ·¢µ¥
- - [X] ¿½±´Í¼Æ¬¸ø°²ÆæÂß¼­
-*** DONE ºÍ°²ÆæÂß¼­¹µÍ¨ [2/2]
- - [X] ÎÊÌâµãÍ¼Æ¬ÊÇÃ»Í¼Æ¬£¬»¹ÊÇ²»Çå³þÍ¼Æ¬Àï±ßÊÇÊ²Ã´ÎÊÌâ
-   - Ã»ÓÐÍ¼Æ¬
-   - ²»ÖªµÀÍ¼Æ¬µÄÎÊÌâÊÇÊ²Ã´
- - [X] Â¼ÏñµÄÕÒÐ¡¸ÕÌá¹©
-*** DONE otp Æ«²î [4/4]
- - [X] ÎÊ°²ÆæÂß¼­ÄÜ·ñ¹Øµô
-   - ÒÑÌá¹©¿âÎÄ¼þ
- - [X] ½è»ú¸´ÏÖ
- - [X] ¶Ô±ÈÐ§¹û
- - [X] ÌÖÂÛ¶Ô²ß
-   - Èç¹ûA¹âÔ´¿É¿¿£¬²»×÷´¦Àí
-   - Èç¹ûA¹âÔ´²»¿É¿¿£¬Ê¹ÓÃÒ»µãÐ£×¼Ìæ»»Ö®Ç°Ê¹ÓÃµÄ¶þµãÐ£×¼
-*** DONE otp¹Ü¿Ø·¶Î§Ö®Íâ£¨Ä£×é³§¹Ü¿ØÖ®ÄÚ£©[3/3]
- - [X] ºÍ°²ÆæÂß¼­È·ÈÏÑéÖ¤·½·¨
-   - ÐèÒªÌá¹©Ä£×éÅÄ raw Í¼Æ¬È·ÈÏÊÇ·ñÔÚËã·¨Âß¼­Ö®ÄÚ
- - [X] ÎÊ³Ì´«²¨ÄÃµ½Ä£×é
-   - ÒÑ¾­¸øÅË³Â¾üÁË
- - [X] ÎÊÅË³Â¾üÄÃµ½Ä£×é
- - ÒÑÕÒµ½Æ«²î×î´óµÄÄ£×é£¨7#£©²¢½»¸ø°²ÆæÂß¼­
-*** DONE ÐÞ¸Äºê¿Ø : ºÍ1616Ïà¹ØµÄµØ·½¶¼¼ÓÉÏ "PD1624"
-*** DONE awb bug ½â¾öÊ±¼ä£¨°´³¡¾°·Ö£©[2/2]
- - [X] ¶Ô±ÈÁ½·Ýbug£¬¸øµ½½ð½Ü
- - [X] ÒªÇó°´³¡¾°£¬¸ø³ö½â¾öÊ±¼ä
-*** DONE ÕÒ¿õÎ°°²ÅÅ 2016.10.11( Ã÷Ìì ) ÈÕ³ö ( Æ«À¶ ) [3/3]
- - [X] ·¢µ¥
- - [X] Ë¢»ú
- - [X] push ¿âÎÄ¼þ²¢ÑéÖ¤ exif ÐÅÏ¢
-*** ¹Ø±Õ [B161009-455] ÊÖ¶¯°×Æ½ºâ 2300K [4/4]                          :@bug:
-    - State "¹Ø±Õ"       from "DONE"       [2016-10-29 ÖÜÁù 15:18]
- - [X] Ë¢»ú
- - [X] ÑéÖ¤
- - ×ª¸øÑîÌÎ¿´
- - ÒÑ¸æÖªÇóÃ÷£¬ÑîÌÎ
- - ÒÑ¸æÖª°²ÆæÂß¼­
- - [X] set_parm_whitebalance ²»Ó¦¸Ã±»µ÷ÓÃµ½ 
- - [X] ´¦Àí²»ÁË£¬½»¸ø°²ÆæÂß¼­
-   - ÒÑ×ö¼æÈÝ
-*** ¹Ø±Õ [B160930-465] log¹Ü¿Ø [2/2]                                   :@bug:
-    - State "¹Ø±Õ"       from "DONE"       [2016-10-29 ÖÜÁù 15:18]
- - [X] Ë¢»ú
- - [X] ÑéÖ¤
- - ÏÂÒ»°æÉè³É×Ô¶¯¹Ø±Õ
-*** ½â¾ö´ý¹Ø±Õ [B161011-671] µ÷½ÚÆØ¹â²¹³¥                              :@bug:
-    - State "½â¾ö´ý¹Ø±Õ" from "DONE"       [2016-10-29 ÖÜÁù 15:19]
- - Í¬ B161010-854 ÒÑ×ö¹æ±Ü
+*** è§£å†³å¾…å…³é—­ [B161024-461] AcuteLogic face é™¤é›¶               :@bug:@é‡äº§å‰å¿…è§£:
+    CLOSED: [2016-10-29 å‘¨å…­ 20:11] DEADLINE: <2016-10-29 å‘¨å…­>
+    - State "è§£å†³å¾…å…³é—­" from "æ­£åœ¨å¤„ç†"   [2016-10-29 å‘¨å…­ 20:11]
+    - State "æ­£åœ¨å¤„ç†"   from "æ–°çš„"       [2016-10-29 å‘¨å…­ 15:26]
+    - State "æ–°çš„"       from "TODO"       [2016-10-29 å‘¨å…­ 15:16]
+    - State "TODO"       from ""           [2016-10-25 å‘¨äºŒ 21:42]
+    - å®‰å¥‡é€»è¾‘ä¸‹ä¸€ç‰ˆè§£
+*** DONE raw å›¾ [4/4]
+    CLOSED: [2016-11-03 å‘¨å›› 15:43] DEADLINE: <2016-10-20 å‘¨å››>
+    - State "DONE"       from "TODO"       [2016-11-03 å‘¨å›› 15:43] \\
+      é«˜é€šå»ºè®®æ–¹å¼æ˜¯é€‰æœ€äº®çš„ç‚¹
+      å®‰å¥‡é€»è¾‘ä½¿ç”¨çš„æ˜¯ä¸­å¿ƒåŒºåŸŸ
+    - State "TODO"       from ""           [2016-10-19 å‘¨ä¸‰ 16:56]
+    - [X] æä¾›å›¾ç‰‡
+    - [X] æä¾›æ•°æ®
+    - [X] è®¡ç®—é€»è¾‘
+      - çœ‹ä¸æ‡‚
+    - [X] æ¨¡ç»„åŽ‚é‡æ–°æä¾› DLL
+      - å·²è°ƒç”¨
+*** ä¸åšå¤„ç† [B161018-700] AcuteLogic segment fault                    :@bug:
+    CLOSED: [2016-10-20 å‘¨å›› 17:20] SCHEDULED: <2016-10-20 å‘¨å››>
+    - State "ä¸åšå¤„ç†"   from "DONE"       [2016-10-29 å‘¨å…­ 15:17]
+    - State "DONE"       from "TODO"       [2016-10-20 å‘¨å›› 17:20] \\
+      å®‰å¥‡é€»è¾‘åˆ†æžä¸º log å¤ªå¤šå¯¼è‡´
+      å…³æŽ‰ log å³å¯
+      äºŽæ˜¯ä¸ä½œå¤„ç†
+    - State "TODO"       from ""           [2016-10-19 å‘¨ä¸‰ 10:17]
+      å·²å‘é€é‚®ä»¶ç»™å®‰å¥‡é€»è¾‘
+*** DONE æŠŠä¿å¯†å¤–å£³çš„èžºé’‰è£…ä¸Š
+*** DONE æ‹·10.15~10.17çš„ç…§ç‰‡
+*** DONE çŽ‹æ°¸å›½ï¼Œæ˜Žåº¦xxxx
+ - [X] å›¾ç‰‡åæš—ï¼Œé—®æ½˜é™ˆå†›
+*** DONE very_limit -> æ—·ä¼Ÿ ï¼ˆç»™åˆ°æ¨¡ç»„å’Œæ‰‹æœºï¼‰[6/6]
+ - [X] å®¤å¤–ï¼ˆä¸Šä¸‹åˆéƒ½å¯ä»¥ï¼Œä¸è¦æ™šä¸Šï¼‰
+ - [X] å®¤å†…ï¼ˆåŠžå…¬å®¤ï¼‰
+ - [X] æ¨¡æ‹Ÿkfc
+ - [X] ç¯ç®±æ ‡å‡†å…‰æºï¼ˆè‰²å¡ï¼‰
+ - [X] å·²å‘å•
+ - [X] æ‹·è´å›¾ç‰‡ç»™å®‰å¥‡é€»è¾‘
+*** DONE å’Œå®‰å¥‡é€»è¾‘æ²Ÿé€š [2/2]
+ - [X] é—®é¢˜ç‚¹å›¾ç‰‡æ˜¯æ²¡å›¾ç‰‡ï¼Œè¿˜æ˜¯ä¸æ¸…æ¥šå›¾ç‰‡é‡Œè¾¹æ˜¯ä»€ä¹ˆé—®é¢˜
+   - æ²¡æœ‰å›¾ç‰‡
+   - ä¸çŸ¥é“å›¾ç‰‡çš„é—®é¢˜æ˜¯ä»€ä¹ˆ
+ - [X] å½•åƒçš„æ‰¾å°åˆšæä¾›
+*** DONE otp åå·® [4/4]
+ - [X] é—®å®‰å¥‡é€»è¾‘èƒ½å¦å…³æŽ‰
+   - å·²æä¾›åº“æ–‡ä»¶
+ - [X] å€Ÿæœºå¤çŽ°
+ - [X] å¯¹æ¯”æ•ˆæžœ
+ - [X] è®¨è®ºå¯¹ç­–
+   - å¦‚æžœAå…‰æºå¯é ï¼Œä¸ä½œå¤„ç†
+   - å¦‚æžœAå…‰æºä¸å¯é ï¼Œä½¿ç”¨ä¸€ç‚¹æ ¡å‡†æ›¿æ¢ä¹‹å‰ä½¿ç”¨çš„äºŒç‚¹æ ¡å‡†
+*** DONE otpç®¡æŽ§èŒƒå›´ä¹‹å¤–ï¼ˆæ¨¡ç»„åŽ‚ç®¡æŽ§ä¹‹å†…ï¼‰[3/3]
+ - [X] å’Œå®‰å¥‡é€»è¾‘ç¡®è®¤éªŒè¯æ–¹æ³•
+   - éœ€è¦æä¾›æ¨¡ç»„æ‹ raw å›¾ç‰‡ç¡®è®¤æ˜¯å¦åœ¨ç®—æ³•é€»è¾‘ä¹‹å†…
+ - [X] é—®ç¨‹ä¼ æ³¢æ‹¿åˆ°æ¨¡ç»„
+   - å·²ç»ç»™æ½˜é™ˆå†›äº†
+ - [X] é—®æ½˜é™ˆå†›æ‹¿åˆ°æ¨¡ç»„
+ - å·²æ‰¾åˆ°åå·®æœ€å¤§çš„æ¨¡ç»„ï¼ˆ7#ï¼‰å¹¶äº¤ç»™å®‰å¥‡é€»è¾‘
+*** DONE ä¿®æ”¹å®æŽ§ : å’Œ1616ç›¸å…³çš„åœ°æ–¹éƒ½åŠ ä¸Š "PD1624"
+*** DONE awb bug è§£å†³æ—¶é—´ï¼ˆæŒ‰åœºæ™¯åˆ†ï¼‰[2/2]
+ - [X] å¯¹æ¯”ä¸¤ä»½bugï¼Œç»™åˆ°é‡‘æ°
+ - [X] è¦æ±‚æŒ‰åœºæ™¯ï¼Œç»™å‡ºè§£å†³æ—¶é—´
+*** DONE æ‰¾æ—·ä¼Ÿå®‰æŽ’ 2016.10.11( æ˜Žå¤© ) æ—¥å‡º ( åè“ ) [3/3]
+ - [X] å‘å•
+ - [X] åˆ·æœº
+ - [X] push åº“æ–‡ä»¶å¹¶éªŒè¯ exif ä¿¡æ¯
+*** å…³é—­ [B161009-455] æ‰‹åŠ¨ç™½å¹³è¡¡ 2300K [4/4]                          :@bug:
+    - State "å…³é—­"       from "DONE"       [2016-10-29 å‘¨å…­ 15:18]
+ - [X] åˆ·æœº
+ - [X] éªŒè¯
+ - è½¬ç»™æ¨æ¶›çœ‹
+ - å·²å‘ŠçŸ¥æ±‚æ˜Žï¼Œæ¨æ¶›
+ - å·²å‘ŠçŸ¥å®‰å¥‡é€»è¾‘
+ - [X] set_parm_whitebalance ä¸åº”è¯¥è¢«è°ƒç”¨åˆ° 
+ - [X] å¤„ç†ä¸äº†ï¼Œäº¤ç»™å®‰å¥‡é€»è¾‘
+   - å·²åšå…¼å®¹
+*** å…³é—­ [B160930-465] logç®¡æŽ§ [2/2]                                   :@bug:
+    - State "å…³é—­"       from "DONE"       [2016-10-29 å‘¨å…­ 15:18]
+ - [X] åˆ·æœº
+ - [X] éªŒè¯
+ - ä¸‹ä¸€ç‰ˆè®¾æˆè‡ªåŠ¨å…³é—­
+*** è§£å†³å¾…å…³é—­ [B161011-671] è°ƒèŠ‚æ›å…‰è¡¥å¿                              :@bug:
+    - State "è§£å†³å¾…å…³é—­" from "DONE"       [2016-10-29 å‘¨å…­ 15:19]
+ - åŒ B161010-854 å·²åšè§„é¿
 
 
    
 ** PD1616LG4 [2/2] 
-*** ¹Ø±Õ [B160922-269] ÏñÃæÉ«²Ê¾ùÔÈ¶È [1/1]                            :@bug:
-    - State "¹Ø±Õ"       from "DONE"       [2016-10-29 ÖÜÁù 15:19]
- - [X] ÓÃ×îÐÂÃ¿ÈÕ±àÒëÊÔÊÔ¿´ shading ÎÊÌâ
-   - »¹ÊÇÓÐ shading ÎÊÌâ
- - [X] È·ÈÏËã·¨¿âÊÇ·ñµ÷ÓÃµ½×¨ÓÃµÄ
-   - µ÷ÓÃµ½ÁË
- - [X] ¸Ä meshrolloff ÊÔÊÔ
-   - ÓÐÓÃ
- - [X] ÎÊ³Â¾üÔõÃ´½â: LG4 ²»ÓÃÕâ¸ö¹¦ÄÜ »¹ÊÇÕÒÎÊÌâ³öÔÚÄÄ
-   - ³Â¾ü : LG4 ¸Ä³É²»ÓÃ
- - [X] Ìá¹© meshrolloff µÄ°æ±¾
- - [X] Ìá¹© f3 °æ±¾ + no_meshrolloff ¸øÁÎÃë¸É
-   - ½øÈëÏà»ú·½Ê½²»Í¬ÑÕÉ«²îÒìºÜ´ó
-**** ¹Ø±Õ Á½Ì×²ÎÊý½Ó¿Ú [4/4]
-     - State "¹Ø±Õ"       from "DONE"       [2016-10-29 ÖÜÁù 15:19]
- - [X] ÄâÖÆ·½°¸
-   ÏîÄ¿ºê¿Ø
- - [X] ·¢ÓÊ¼þÈ·ÈÏ
-   + ±ê×¼
-   + ½Ó¿ÚÊÂÒË
-   + Àý×ÓÍ¼Æ¬
- - [X] Ìá¹©ÎÞ·¨¿ª»úµÄlog
- - [X] »»³É¶ÁÈ¡ÏµÍ³ÊôÐÔ
-*** ¹Ø±Õ [B161010-854] µ÷½ÚÆØ¹â²¹³¥ [4/4]                              :@bug:
-    - State "¹Ø±Õ"       from "DONE"       [2016-10-29 ÖÜÁù 15:19]
- - [X] Ë¢»ú
- - [X] ÑéÖ¤
-   - ÑéÖ¤²»³öÀ´£¬×ª¸øÇóÃ÷
- - [X] ÇóÃ÷:3a¶Î´íÎó
- - [X] ÏéÓñ:¼Ó¹æ±Ü
+*** å…³é—­ [B160922-269] åƒé¢è‰²å½©å‡åŒ€åº¦ [1/1]                            :@bug:
+    - State "å…³é—­"       from "DONE"       [2016-10-29 å‘¨å…­ 15:19]
+ - [X] ç”¨æœ€æ–°æ¯æ—¥ç¼–è¯‘è¯•è¯•çœ‹ shading é—®é¢˜
+   - è¿˜æ˜¯æœ‰ shading é—®é¢˜
+ - [X] ç¡®è®¤ç®—æ³•åº“æ˜¯å¦è°ƒç”¨åˆ°ä¸“ç”¨çš„
+   - è°ƒç”¨åˆ°äº†
+ - [X] æ”¹ meshrolloff è¯•è¯•
+   - æœ‰ç”¨
+ - [X] é—®é™ˆå†›æ€Žä¹ˆè§£: LG4 ä¸ç”¨è¿™ä¸ªåŠŸèƒ½ è¿˜æ˜¯æ‰¾é—®é¢˜å‡ºåœ¨å“ª
+   - é™ˆå†› : LG4 æ”¹æˆä¸ç”¨
+ - [X] æä¾› meshrolloff çš„ç‰ˆæœ¬
+ - [X] æä¾› f3 ç‰ˆæœ¬ + no_meshrolloff ç»™å»–ç§’å¹²
+   - è¿›å…¥ç›¸æœºæ–¹å¼ä¸åŒé¢œè‰²å·®å¼‚å¾ˆå¤§
+**** å…³é—­ ä¸¤å¥—å‚æ•°æŽ¥å£ [4/4]
+     - State "å…³é—­"       from "DONE"       [2016-10-29 å‘¨å…­ 15:19]
+ - [X] æ‹Ÿåˆ¶æ–¹æ¡ˆ
+   é¡¹ç›®å®æŽ§
+ - [X] å‘é‚®ä»¶ç¡®è®¤
+   + æ ‡å‡†
+   + æŽ¥å£äº‹å®œ
+   + ä¾‹å­å›¾ç‰‡
+ - [X] æä¾›æ— æ³•å¼€æœºçš„log
+ - [X] æ¢æˆè¯»å–ç³»ç»Ÿå±žæ€§
+*** å…³é—­ [B161010-854] è°ƒèŠ‚æ›å…‰è¡¥å¿ [4/4]                              :@bug:
+    - State "å…³é—­"       from "DONE"       [2016-10-29 å‘¨å…­ 15:19]
+ - [X] åˆ·æœº
+ - [X] éªŒè¯
+   - éªŒè¯ä¸å‡ºæ¥ï¼Œè½¬ç»™æ±‚æ˜Ž
+ - [X] æ±‚æ˜Ž:3aæ®µé”™è¯¯
+ - [X] ç¥¥çŽ‰:åŠ è§„é¿
 
 
 ** PD1617/PD1619 [10/10] 
-   SCHEDULED: <2016-12-02 ÖÜÎå>
-   - State "TODO"       from ""           [2016-10-19 ÖÜÈý 09:16]
-*** ¹Ø±Õ [B161023-299] ev_extend                                       :@bug:
-    CLOSED: [2016-10-29 ÖÜÁù 15:16]
-    - State "¹Ø±Õ"       from "½â¾ö´ý¹Ø±Õ" [2016-10-31 ÖÜÒ» 11:36]
-    - State "½â¾ö´ý¹Ø±Õ" from "TODO"       [2016-10-29 ÖÜÁù 15:16]
-    - State "TODO"       from ""           [2016-10-28 ÖÜÎå 12:03]
-*** ½â¾ö´ý¹Ø±Õ [B161023-233] HDR Æ«À¶                                  :@bug:
-    CLOSED: [2016-10-29 ÖÜÁù 20:16]
-    - State "½â¾ö´ý¹Ø±Õ" from "ÕýÔÚ´¦Àí"   [2016-10-29 ÖÜÁù 20:16]
-    - State "ÕýÔÚ´¦Àí"   from "TODO"       [2016-10-29 ÖÜÁù 15:15]
-    - State "TODO"       from ""           [2016-10-28 ÖÜÎå 12:01]
-    - °²ÆæÂß¼­ÏÂÒ»°æ½â
-*** DONE ¼Ä1617¡¢1619»ØÈ¥¸øÓÀ¸»
-    CLOSED: [2016-10-25 ÖÜ¶þ 09:19]
-    - State "DONE"       from "TODO"       [2016-10-25 ÖÜ¶þ 09:19]
-    - State "TODO"       from ""           [2016-10-24 ÖÜÒ» 17:50]
-*** DONE ÐÂ»úÆ÷·¢·ÅÐÐµ¥
-    CLOSED: [2016-10-24 ÖÜÒ» 22:46]
-    - State "DONE"       from "TODO"       [2016-10-24 ÖÜÒ» 22:46]
-    - State "TODO"       from ""           [2016-10-24 ÖÜÒ» 10:06]
-*** DONE ²ð»ú»» golden
-    CLOSED: [2016-10-24 ÖÜÒ» 17:50]
-    - State "DONE"       from "TODO"       [2016-10-24 ÖÜÒ» 17:50]
-    - State "TODO"       from ""           [2016-10-24 ÖÜÒ» 10:06]
-*** DONE ¸øº£Êå±à¸ö¿â 
-*** DONE Ìí¼Ó76proµÄ´úÂë 
-*** DONE ¼ÄÍùÈÕ±¾µÄ golden ÊÖ»ú×´Ì¬
+   SCHEDULED: <2016-12-02 å‘¨äº”>
+   - State "TODO"       from ""           [2016-10-19 å‘¨ä¸‰ 09:16]
+*** å…³é—­ [B161023-299] ev_extend                                       :@bug:
+    CLOSED: [2016-10-29 å‘¨å…­ 15:16]
+    - State "å…³é—­"       from "è§£å†³å¾…å…³é—­" [2016-10-31 å‘¨ä¸€ 11:36]
+    - State "è§£å†³å¾…å…³é—­" from "TODO"       [2016-10-29 å‘¨å…­ 15:16]
+    - State "TODO"       from ""           [2016-10-28 å‘¨äº” 12:03]
+*** è§£å†³å¾…å…³é—­ [B161023-233] HDR åè“                                  :@bug:
+    CLOSED: [2016-10-29 å‘¨å…­ 20:16]
+    - State "è§£å†³å¾…å…³é—­" from "æ­£åœ¨å¤„ç†"   [2016-10-29 å‘¨å…­ 20:16]
+    - State "æ­£åœ¨å¤„ç†"   from "TODO"       [2016-10-29 å‘¨å…­ 15:15]
+    - State "TODO"       from ""           [2016-10-28 å‘¨äº” 12:01]
+    - å®‰å¥‡é€»è¾‘ä¸‹ä¸€ç‰ˆè§£
+*** DONE å¯„1617ã€1619å›žåŽ»ç»™æ°¸å¯Œ
+    CLOSED: [2016-10-25 å‘¨äºŒ 09:19]
+    - State "DONE"       from "TODO"       [2016-10-25 å‘¨äºŒ 09:19]
+    - State "TODO"       from ""           [2016-10-24 å‘¨ä¸€ 17:50]
+*** DONE æ–°æœºå™¨å‘æ”¾è¡Œå•
+    CLOSED: [2016-10-24 å‘¨ä¸€ 22:46]
+    - State "DONE"       from "TODO"       [2016-10-24 å‘¨ä¸€ 22:46]
+    - State "TODO"       from ""           [2016-10-24 å‘¨ä¸€ 10:06]
+*** DONE æ‹†æœºæ¢ golden
+    CLOSED: [2016-10-24 å‘¨ä¸€ 17:50]
+    - State "DONE"       from "TODO"       [2016-10-24 å‘¨ä¸€ 17:50]
+    - State "TODO"       from ""           [2016-10-24 å‘¨ä¸€ 10:06]
+*** DONE ç»™æµ·å”ç¼–ä¸ªåº“ 
+*** DONE æ·»åŠ 76proçš„ä»£ç  
+*** DONE å¯„å¾€æ—¥æœ¬çš„ golden æ‰‹æœºçŠ¶æ€
     PD1617_A_A09.30.07
 *** DONE porting checklist [11/11]
-   - [X] ÑéÖ¤¡¢Ìí¼ÓÏîÄ¿ºê¿Ø
-   - [X]  Çø·ÖÇ°ºóÖÃ
+   - [X] éªŒè¯ã€æ·»åŠ é¡¹ç›®å®æŽ§
+   - [X]  åŒºåˆ†å‰åŽç½®
    - [X]  device-vendor.mk
-   - [X]  ¹¤Ä£Ê¹ÓÃq3a
+   - [X]  å·¥æ¨¡ä½¿ç”¨q3a
    - [X]  prebuilt_HY11
-   - [X]  µ÷ÓÃ ext_lib
+   - [X]  è°ƒç”¨ ext_lib
    - [X]  roi&face
    - [X]  aec_param
    - [X]  otp->wbc
    - [X]  led calibration
    - [X]  mcas
-*** DONE 2016.10.10 ¸ø³ö golden
+*** DONE 2016.10.10 ç»™å‡º golden
 
 
 ** PD1621 [1/1] 
-*** ½â¾ö´ý¹Ø±Õ [B161018-885] ÓÃÀý13ÂË¾µ                         :@bug:@Á¿²úÇ°±Ø½â:
-    CLOSED: [2016-10-29 ÖÜÁù 20:25] DEADLINE: <2016-10-29 ÖÜÁù>
-    - State "½â¾ö´ý¹Ø±Õ" from "ÕýÔÚ´¦Àí"   [2016-10-29 ÖÜÁù 20:25]
-    - State "ÕýÔÚ´¦Àí"   from "TODO"       [2016-10-29 ÖÜÁù 15:11]
-    - State "TODO"       from ""           [2016-10-28 ÖÜÎå 11:46]
+*** è§£å†³å¾…å…³é—­ [B161018-885] ç”¨ä¾‹13æ»¤é•œ                         :@bug:@é‡äº§å‰å¿…è§£:
+    CLOSED: [2016-10-29 å‘¨å…­ 20:25] DEADLINE: <2016-10-29 å‘¨å…­>
+    - State "è§£å†³å¾…å…³é—­" from "æ­£åœ¨å¤„ç†"   [2016-10-29 å‘¨å…­ 20:25]
+    - State "æ­£åœ¨å¤„ç†"   from "TODO"       [2016-10-29 å‘¨å…­ 15:11]
+    - State "TODO"       from ""           [2016-10-28 å‘¨äº” 11:46]
     - aec_process.c:1983
 
 
 
 ** TD1605(8917) [1/1]
-*** ×ª¸øËûÈË [B161019-587] ev_range                                    :@bug:
-    CLOSED: [2016-10-29 ÖÜÁù 15:01]
-    - State "×ª¸øËûÈË"   from "½â¾ö´ý¹Ø±Õ" [2016-10-29 ÖÜÁù 15:21] \\
-      µÍ¶ËÆ½Ì¨²»Î¬»¤3a´úÂë
-      ×ª¸øÇóÃ÷
-      ¸ø¸ßÍ¨Ìácase
-    - State "½â¾ö´ý¹Ø±Õ" from "DONE"       [2016-10-29 ÖÜÁù 15:10]
-    - State "DONE"       from "TODO"       [2016-10-29 ÖÜÁù 15:01]
-    - State "TODO"       from ""           [2016-10-28 ÖÜÎå 12:06]
+*** è½¬ç»™ä»–äºº [B161019-587] ev_range                                    :@bug:
+    CLOSED: [2016-10-29 å‘¨å…­ 15:01]
+    - State "è½¬ç»™ä»–äºº"   from "è§£å†³å¾…å…³é—­" [2016-10-29 å‘¨å…­ 15:21] \\
+      ä½Žç«¯å¹³å°ä¸ç»´æŠ¤3aä»£ç 
+      è½¬ç»™æ±‚æ˜Ž
+      ç»™é«˜é€šæcase
+    - State "è§£å†³å¾…å…³é—­" from "DONE"       [2016-10-29 å‘¨å…­ 15:10]
+    - State "DONE"       from "TODO"       [2016-10-29 å‘¨å…­ 15:01]
+    - State "TODO"       from ""           [2016-10-28 å‘¨äº” 12:06]
 
