--- a/org/slf.org
+++ b/org/slf.org
@@ -1,12 +1,13 @@
 
 
-* TODO priv [7/22]
+* priv [19/33]
+  SCHEDULED: <2016-10-19 周三>
   - State "TODO"       from "TODO"       [2016-10-19 周三 09:00]
-她喜欢我
-还有时间
-我能反杀
-一直想飞到西安然后坐火车去敦煌
-
+  她喜欢我
+  还有时间
+  我能反杀
+  一直想飞到西安然后坐火车去敦煌
+  
 ** TODO 给 explorer 打 patch
    SCHEDULED: <2016-11-30 周三>
    - State "TODO"       from ""           [2016-11-24 周四 14:29]
@@ -177,44 +178,18 @@
    CLOSED: [2016-11-11 周五 21:38] DEADLINE: <2016-11-11 周五>
    - State "DONE"       from "TODO"       [2016-11-11 周五 21:38]
    - State "TODO"       from ""           [2016-11-11 周五 09:40]
-** TODO 11.21 打印
-   SCHEDULED: <2016-11-21 周一>
+** DONE 11.21 打印
+   CLOSED: [2016-11-25 周五 21:52] SCHEDULED: <2016-11-21 周一>
+   - State "DONE"       from "TODO"       [2016-11-25 周五 21:52]
    - State "TODO"       from ""           [2016-11-11 周五 10:40]
-** TODO 买票 12.31
-   SCHEDULED: <2016-11-12 周六>
+** DONE 买票 12.31
+   CLOSED: [2016-11-25 周五 21:52] SCHEDULED: <2016-11-12 周六>
+   - State "DONE"       from "TODO"       [2016-11-25 周五 21:52]
    - State "TODO"       from ""           [2016-11-11 周五 09:41]
 ** DONE LaTeX 
    CLOSED: [2016-11-15 周二 10:02] SCHEDULED: <2016-11-11 周五>
    - State "DONE"       from "TODO"       [2016-11-15 周二 10:02]
    - State "TODO"       from ""           [2016-11-11 周五 09:56]
-** DONE 上传 tabbar-tweak.el
-   - State "DONE"       from "DONE"       [2016-10-19 周三 09:00]
-   
-* learn_table
-
-| student | math | pyh | mean | pi number |
-|---------+------+-----+------+-----------|
-| b 测试  |   13 |  09 |   11 |         5 |
-| h       |   15 |  14 | 14.5 |         7 |
-| a       |   17 |  13 |   15 |         9 |
-#+TBLFM: $4=vmean($2..$3)
-#+TBLFM: $5='(substring (number-to-string $pi) (round(string-to-number $4)) (+ 1 (round (string-to-number $4))));    
-#+CONSTANTS: pi=3.1415926535897932384666666666666
-
-| id |              r/g |              b/g |            gb/gr |   distance |
-|----+------------------+------------------+------------------+------------|
-|    | 540.602836879433 | 708.265957446809 | 1028.49290780142 |  1771.8880 |
-|  1 |         0.560547 |         0.629883 |         1.000977 | 0.10865988 |
-|  2 |         0.571289 |         0.642578 |         1.004883 | 0.10854316 |
-|  7 |         0.574219 |         0.637695 |                1 | 0.11745107 |
-#+TBLFM: $5=(((($2*1024/@2$2)-1)^2+(($3*1024/@2$3)-1)^2+(($4*1024/@2$4)-1)^2)^0.5)
-
-* temporary [10/11]
-  SCHEDULED: <2016-10-19 周三>
-** DONE qyh dj peek
-   CLOSED: [2016-11-05 周六 18:28] DEADLINE: <2016-11-07 周一>
-   - State "DONE"       from "TODO"       [2016-11-05 周六 18:28]
-   - State "TODO"       from ""           [2016-11-05 周六 17:44]
 ** TODO 下载歌曲 [0/17]
    DEADLINE: <2016-10-26 周三>
    - State "TODO"       from ""           [2016-10-26 周三 09:36]
@@ -235,6 +210,13 @@
    - [ ] 你是我心内的一首歌
    - [ ] 丹顶鹤的故事
    - [ ] 遇见你的时候所有星星都落到我头上
+** DONE 上传 tabbar-tweak.el
+   - State "DONE"       from "DONE"       [2016-10-19 周三 09:00]
+
+** DONE qyh dj peek
+   CLOSED: [2016-11-05 周六 18:28] DEADLINE: <2016-11-07 周一>
+   - State "DONE"       from "TODO"       [2016-11-05 周六 18:28]
+   - State "TODO"       from ""           [2016-11-05 周六 17:44]
 
 ** DONE 同步.emacs
    CLOSED: [2016-10-19 周三 10:29]
@@ -263,3 +245,22 @@
 ** DONE 问石梦云win7的主题
  - 搜狗的“图标整理器”
 ** DONE mtp驱动
+   
+* learn_table
+
+| student | math | pyh | mean | pi number |
+|---------+------+-----+------+-----------|
+| b 测试  |   13 |  09 |   11 |         5 |
+| h       |   15 |  14 | 14.5 |         7 |
+| a       |   17 |  13 |   15 |         9 |
+#+TBLFM: $4=vmean($2..$3)
+#+TBLFM: $5='(substring (number-to-string $pi) (round(string-to-number $4)) (+ 1 (round (string-to-number $4))));    
+#+CONSTANTS: pi=3.1415926535897932384666666666666
+
+| id |              r/g |              b/g |            gb/gr |   distance |
+|----+------------------+------------------+------------------+------------|
+|    | 540.602836879433 | 708.265957446809 | 1028.49290780142 |  1771.8880 |
+|  1 |         0.560547 |         0.629883 |         1.000977 | 0.10865988 |
+|  2 |         0.571289 |         0.642578 |         1.004883 | 0.10854316 |
+|  7 |         0.574219 |         0.637695 |                1 | 0.11745107 |
+#+TBLFM: $5=(((($2*1024/@2$2)-1)^2+(($3*1024/@2$3)-1)^2+(($4*1024/@2$4)-1)^2)^0.5)
