--- a/org/vivo.org
+++ b/org/vivo.org
@@ -2,7 +2,7 @@
 
 
 
-* temporary [4/4]
+* pub [4/4]
   SCHEDULED: <2016-10-19 周三>
   CLOCK: [2016-10-19 周三 09:42]--[2016-10-19 周三 09:44] =>  0:02
 ** DONE 3a r10809-1...r10810-1
@@ -31,13 +31,13 @@
    - State "DONE"       from "TODO"       [2016-11-15 周二 10:02]
    - State "TODO"       from ""           [2016-11-05 周六 18:54]
 
-* 出差长安记得带回去的 [0/5]
+* 出差长安记得带回去的 [1/5]
   SCHEDULED: <2016-10-16 周日>
  - [ ] 台式机 x2
  - [ ] 插板 x1
  - [ ] 充电头 x1
  - [ ] 数据线 x3 （康丽 x1 ）
- - [ ] PD1415D PD1415BA
+ - [X] PD1415D PD1415BA
 
 
 
@@ -63,22 +63,25 @@
     - State "正在处理"   from "新的"       [2016-10-29 周六 15:26]
     - State "新的"       from "TODO"       [2016-10-29 周六 15:12]
     - State "TODO"       from ""           [2016-10-28 周五 11:55]
-*** 解决待关闭 [B161026-117] ISO 人物偏灰                       :@bug:@量产前必解:
+*** 关闭 [B161026-117] ISO 人物偏灰                             :@bug:@量产前必解:
     CLOSED: [2016-10-29 周六 20:12] DEADLINE: <2016-10-29 周六>
+    - State "关闭"       from "解决待关闭" [2016-11-25 周五 11:07]
     - State "解决待关闭" from "正在处理"   [2016-10-29 周六 20:12]
     - State "正在处理"   from "新的"       [2016-10-29 周六 15:26]
     - State "新的"       from "TODO"       [2016-10-29 周六 15:12]
     - State "TODO"       from ""           [2016-10-28 周五 11:54]
-*** 解决待关闭 [B161026-206] 用例10模式切换                     :@bug:@量产前必解:
+*** 关闭 [B161026-206] 用例10模式切换                           :@bug:@量产前必解:
     CLOSED: [2016-10-29 周六 20:09] DEADLINE: <2016-10-29 周六>
+    - State "关闭"       from "解决待关闭" [2016-11-25 周五 11:07]
     - State "解决待关闭" from "正在处理"   [2016-10-29 周六 20:09]
     - State "正在处理"   from "新的"       [2016-10-29 周六 15:26]
     - State "新的"       from "TODO"       [2016-10-29 周六 15:12]
     - State "TODO"       from ""           [2016-10-28 周五 11:48]
     - v-85b175f59314fc9a1ff74c038ed7b5e52c90e405
     - aec_process.c:3903
-*** 解决待关闭 [B161024-461] AcuteLogic face 除零               :@bug:@量产前必解:
+*** 关闭 [B161024-461] AcuteLogic face 除零                     :@bug:@量产前必解:
     CLOSED: [2016-10-29 周六 20:11] DEADLINE: <2016-10-29 周六>
+    - State "关闭"       from "解决待关闭" [2016-11-25 周五 11:07]
     - State "解决待关闭" from "正在处理"   [2016-10-29 周六 20:11]
     - State "正在处理"   from "新的"       [2016-10-29 周六 15:26]
     - State "新的"       from "TODO"       [2016-10-29 周六 15:16]
@@ -159,7 +162,8 @@
  - [X] 刷机
  - [X] 验证
  - 下一版设成自动关闭
-*** 解决待关闭 [B161011-671] 调节曝光补偿                              :@bug:
+*** 关闭 [B161011-671] 调节曝光补偿                                    :@bug:
+    - State "关闭"       from "解决待关闭" [2016-11-25 周五 11:05]
     - State "解决待关闭" from "DONE"       [2016-10-29 周六 15:19]
  - 同 B161010-854 已做规避
 
@@ -206,8 +210,9 @@
     - State "关闭"       from "解决待关闭" [2016-10-31 周一 11:36]
     - State "解决待关闭" from "TODO"       [2016-10-29 周六 15:16]
     - State "TODO"       from ""           [2016-10-28 周五 12:03]
-*** 解决待关闭 [B161023-233] HDR 偏蓝                                  :@bug:
+*** 关闭 [B161023-233] HDR 偏蓝                                        :@bug:
     CLOSED: [2016-10-29 周六 20:16]
+    - State "关闭"       from "解决待关闭" [2016-11-25 周五 11:05]
     - State "解决待关闭" from "正在处理"   [2016-10-29 周六 20:16]
     - State "正在处理"   from "TODO"       [2016-10-29 周六 15:15]
     - State "TODO"       from ""           [2016-10-28 周五 12:01]
@@ -244,8 +249,9 @@
 
 
 ** PD1621 [1/1] 
-*** 解决待关闭 [B161018-885] 用例13滤镜                         :@bug:@量产前必解:
+*** 关闭 [B161018-885] 用例13滤镜                               :@bug:@量产前必解:
     CLOSED: [2016-10-29 周六 20:25] DEADLINE: <2016-10-29 周六>
+    - State "关闭"       from "解决待关闭" [2016-11-25 周五 11:05]
     - State "解决待关闭" from "正在处理"   [2016-10-29 周六 20:25]
     - State "正在处理"   from "TODO"       [2016-10-29 周六 15:11]
     - State "TODO"       from ""           [2016-10-28 周五 11:46]
@@ -254,8 +260,9 @@
 
 
 ** TD1605(8917) [1/1]
-*** 转给他人 [B161019-587] ev_range                                    :@bug:
+*** 不做处理 [B161019-587] ev_range                                    :@bug:
     CLOSED: [2016-10-29 周六 15:01]
+    - State "不做处理"   from "转给他人"   [2016-11-25 周五 11:04]
     - State "转给他人"   from "解决待关闭" [2016-10-29 周六 15:21] \\
       低端平台不维护3a代码
       转给求明
